--- a/agents.ipynb
+++ b/agents.ipynb
@@ -2086,7 +2086,7 @@
    "source": [
     "import os\n",
     "\n",
-    "os.environ[\"TAVILY_API_KEY\"] = \"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\"\n",
+    "os.environ[\"TAVILY_API_KEY\"] = \"api key\"\n",
     "from langchain_community.tools.tavily_search import TavilySearchResults\n",
     "\n",
     "tool = TavilySearchResults(max_results=1)\n",
