--- a/agentsevaluation.ipynb
+++ b/agentsevaluation.ipynb
@@ -631,7 +631,7 @@
     "\n",
     "gpt4 = AzureChatOpenAI(\n",
     "    azure_deployment=\"gpt-4-128k\",\n",
-    "    openai_api_key=\"7c3f9550b69c419aa0f1830e338ff562\",\n",
+    "    openai_api_key=\"api key\",\n",
     "    openai_api_type=\"azure\",\n",
     "    openai_api_version=\"2023-12-01-preview\",\n",
     "    azure_endpoint=\"https://chatbotopenaikeyswe.openai.azure.com/\",\n",
