--- a/ragasevaluation.ipynb
+++ b/ragasevaluation.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "gpt = AzureChatOpenAI(\n",
     "    azure_deployment=\"gpt-35-turbo-1106\",\n",
-    "    openai_api_key=\"7c3f9550b69c419aa0f1830e338ff562\",\n",
+    "    openai_api_key=\"api key\",\n",
     "    openai_api_type=\"azure\",\n",
     "    openai_api_version=\"2023-12-01-preview\",\n",
     "    azure_endpoint=\"https://chatbotopenaikeyswe.openai.azure.com/\",\n",
@@ -117,7 +117,7 @@
     "from langchain_openai import AzureOpenAIEmbeddings\n",
     "embed = AzureOpenAIEmbeddings(\n",
     "    azure_deployment=\"text-embedding-ada-002\",\n",
-    "    openai_api_key=\"7c3f9550b69c419aa0f1830e338ff562\",\n",
+    "    openai_api_key=\"api key\",\n",
     "    azure_endpoint=\"https://chatbotopenaikeyswe.openai.azure.com/\"\n",
     ")"
    ]
@@ -526,7 +526,7 @@
    "outputs": [],
    "source": [
     "azure_model = AzureChatOpenAI(\n",
-    "    openai_api_key=\"7c3f9550b69c419aa0f1830e338ff562\",\n",
+    "    openai_api_key=\"api key\",\n",
     "    openai_api_version=\"2023-12-01-preview\",\n",
     "    azure_endpoint=azure_configs[\"base_url\"],\n",
     "    azure_deployment=azure_configs[\"model_deployment\"],\n",
@@ -542,7 +542,7 @@
    "outputs": [],
    "source": [
     "azure_embeddings = AzureOpenAIEmbeddings(\n",
-    "    openai_api_key=\"7c3f9550b69c419aa0f1830e338ff562\",\n",
+    "    openai_api_key=\"api key\",\n",
     "    openai_api_version=\"2023-05-15\",\n",
     "    azure_endpoint=azure_configs[\"base_url\"],\n",
     "    azure_deployment=azure_configs[\"embedding_deployment\"],\n",
