--- a/raglangsmithevaluation.ipynb
+++ b/raglangsmithevaluation.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "gpt = AzureChatOpenAI(\n",
     "    azure_deployment=\"gpt-35-turbo-1106\",\n",
-    "    openai_api_key=\"7c3f9550b69c419aa0f1830e338ff562\",\n",
+    "    openai_api_key=\"api key\",\n",
     "    openai_api_type=\"azure\",\n",
     "    openai_api_version=\"2023-12-01-preview\",\n",
     "    azure_endpoint=\"https://chatbotopenaikeyswe.openai.azure.com/\",\n",
@@ -111,7 +111,7 @@
     "from langchain_openai import AzureOpenAIEmbeddings\n",
     "embed = AzureOpenAIEmbeddings(\n",
     "    azure_deployment=\"text-embedding-ada-002\",\n",
-    "    openai_api_key=\"7c3f9550b69c419aa0f1830e338ff562\",\n",
+    "    openai_api_key=\"api key\",\n",
     "    azure_endpoint=\"https://chatbotopenaikeyswe.openai.azure.com/\"\n",
     ")"
    ]
@@ -479,7 +479,7 @@
     "\n",
     "gpt4 = AzureChatOpenAI(\n",
     "    azure_deployment=\"gpt-4-128k\",\n",
-    "    openai_api_key=\"7c3f9550b69c419aa0f1830e338ff562\",\n",
+    "    openai_api_key=\"api key\",\n",
     "    openai_api_type=\"azure\",\n",
     "    openai_api_version=\"2023-12-01-preview\",\n",
     "    azure_endpoint=\"https://chatbotopenaikeyswe.openai.azure.com/\",\n",
